base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: home-assistant
